--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node scripts/build.js",
-    "load": "node scripts/load.js"
+    "load": "node scripts/load.js",
+    "test-v4": "npm install --save mongoose@v4 && node scripts/load.js",
+    "test-v5": "npm install --save mongoose@v5 && node scripts/load.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^5.12.10",
+    "mongoose": "^4.13.21",
     "uuid": "^8.3.2"
   }
 }
